service.yml
apiVersion: v1
kind: Service
metadata:
  name: gpt-hf-service
spec:
  type: NodePort
  selector:
    app: gpt-hf-pod
  ports:
    - port: 8000
      targetPort: 8000
      # Don't need node port
      nodePort: 30007
