ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gpt-hf-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: gpt.167.172.14.0.sslip.io  # change to your Ingress Controller's external IP
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gpt-hf-service
                port:
                  number: 8000
